# FraudGuard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: app.py
fraudguard/: __init__.py  data.py  evaluate.py  features.py  models.py
scripts/: predict.py  train.py
tests/: __init__.py  conftest.py  test_data.py  test_evaluate.py  test_features.py  test_models.py
